[package]
name = "stout"
version = "0.1.0"
authors = ["Adrian Fraiha <aef@fastmail.com>"]
edition = "2018"

[dependencies]
stout-api = { path = "api/", version = "0.9.0" }
lazy_static = "1.4"
regex = "1"
futures = "0.3.12"
itertools = "0.10.0"
chrono = "0.4.19"

[dependencies.serenity]
default-features = false
features = ["builder", "cache", "collector", "client", "framework", "gateway", "http", "model", "standard_framework", "utils", "utils", "rustls_backend"]
version = "0.10"

[dependencies.tokio]
version = "1.2"
features = ["full"]

[workspace]
members = [
    ".",
    "api",
]
